# cqrs

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  rustfmt.toml
cqrs/: CHANGELOG.md  Cargo.toml  build.rs  release.toml
cqrs-codegen/: .gitignore  Cargo.toml  build.rs
cqrs-codegen/impl/: Cargo.toml
cqrs-codegen/impl/src/: aggregate.rs  command.rs  event_sourced.rs  lib.rs  util.rs
cqrs-codegen/impl/src/event/: aggregate_event.rs  event.rs  mod.rs  registered_event.rs  typed_event.rs  versioned_event.rs
cqrs-codegen/src/: codegen.wasm  event.rs  lib.rs  util.rs
cqrs-codegen/src/event/: event.rs  mod.rs
cqrs-codegen/tests/: aggregate.rs  aggregate_event.rs  command.rs  event.rs  event_sourced.rs  registered_event.rs  versioned_event.rs
cqrs-core/: CHANGELOG.md  Cargo.toml  release.toml
cqrs-core/src/: _aggregate.rs  _types.rs  aggregate.rs  command.rs  event.rs  future.rs  lib.rs  reactor.rs  snapshot.rs  store.rs  types.rs  view.rs
cqrs-core/src/_into/: mod.rs  try_future.rs  try_stream.rs
cqrs-core/src/into/: try_stream.rs
cqrs-core/tests/: trivial.rs
cqrs-data/: Cargo.toml
cqrs-data/src/: aggregate_source.rs  aggregate_store.rs  entity.rs  event.rs  lib.rs  memory.rs  memory_tests.rs  snapshot.rs  trivial.rs  types.rs
cqrs-data/src/entity/: mod.rs  source.rs
cqrs-data/src/event/: mod.rs  source.rs  store.rs
cqrs-data/src/events/: source.rs  store.rs
cqrs-data/src/snapshots/: mod.rs  source.rs  store.rs
cqrs-data/src/state/: mod.rs  source.rs  store.rs
cqrs-data/tests/: load_exec_persist.rs
cqrs-eventstore/: Cargo.toml
cqrs-eventstore/examples/: etl-test.rs
cqrs-eventstore/src/: lib.rs
cqrs-eventstore/src/http/: dto.rs  dto_tests.rs  mod.rs  mod_tests.rs
cqrs-eventstore/src/http/samples/: event_sample.json  stream_page.json
cqrs-memory/: Cargo.toml
cqrs-memory/examples/: test.rs  todo.rs
cqrs-memory/src/: event_store.rs  event_store_tests.rs  event_stream.rs  event_stream_tests.rs  lib.rs  state_store.rs  state_store_tests.rs
cqrs-memory/tests/: todo.rs
cqrs-postgres/: CHANGELOG.md  Cargo.toml  release.toml
cqrs-postgres/src/: create_tables.sql  db_wrapper.rs  error.rs  lib.rs  raw.rs  reactor.rs  store.rs  util.rs
cqrs-postgres/src/migrations/: 00_create_migrations.sql  01_create_tables.sql
cqrs-proptest/: CHANGELOG.md  Cargo.toml  release.toml
cqrs-proptest/src/: lib.rs
cqrs-redis/: Cargo.toml
cqrs-redis/src/: error.rs  lib.rs
cqrs-todo-core/: CHANGELOG.md  Cargo.toml  release.toml
cqrs-todo-core/proptest-regressions/: lib.txt
cqrs-todo-core/src/: commands.rs  domain.rs  error.rs  events.rs  lib.rs
cqrs-todo-core/src/snapshots/: tests__completed_event.snap  tests__created_event.snap  tests__description_updated_event.snap  tests__reminder_updated_event.snap  tests__reminder_updated_none_event.snap  tests__text_updated_event.snap  tests__uncompleted_event.snap
cqrs-todoql/: Cargo.toml
cqrs-todoql-psql/: Cargo.toml
cqrs-todoql-psql/src/: lib.rs  main.rs
cqrs-todoql-psql/src/graphql/: endpoint.rs  mod.rs  schema.rs
cqrs-todoql/src/: lib.rs  main.rs  store.rs
cqrs-todoql/src/graphql/: endpoint.rs  mod.rs  schema.rs
cqrs/src/: _entity.rs  _testing.rs  entity.rs  error.rs  event_processing.rs  lib.rs  lib_tests.rs  memory.rs  memory_tests.rs  projection.rs  store.rs  system.rs  testing.rs  trivial.rs  types.rs
cqrs/src/aggregate/: hydrated.rs  mod.rs
cqrs/src/domain/: command.rs  execute.rs  ident.rs  mod.rs  mod_tests.rs  persist.rs  query.rs
cqrs/src/lifecycle/: basic.rs  context.rs  mod.rs  static.rs
cqrs/tests/: load_exec_persist.rs
hooks/: install.sh  pre-commit
okazis/: Cargo.toml
okazis-memory/: Cargo.toml
okazis-memory/examples/: test.rs  todo.rs
okazis-memory/src/: event_store.rs  event_store_tests.rs  event_stream.rs  event_stream_tests.rs  lib.rs  state_store.rs  state_store_tests.rs
okazis/src/: lib.rs  trivial.rs
src/: install_kcov.sh
