[package]
name = "cqrs-codegen"
version = "0.1.0-dev"
edition = "2018"
# authors =
description = "Code generation interface for CQRS/ES"
# license = "Apache-2.0"
readme = "../README.md"
# documentation = "https://docs.rs/cqrs-core"
# repository = "https://github.com/cq-rs/cqrs"

[lib]
proc-macro = true

[features]
default = ["watt"]
no-watt = ["cqrs-codegen-impl", "syn"]

[dependencies]
cqrs-codegen-impl = { version = "0.1.0-dev", path = "./impl", optional = true }
syn = { version = "1.0.98", features = ["full"], optional = true }
watt = { version = "0.4.0", optional = true }

[dev-dependencies]
cqrs = { version = "0.3", path = "../cqrs" }
