[package]
name = "cqrs-core"
version = "0.3.0"
edition = "2018"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Core types and traits for CQRS/ES"
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/cqrs-core"
repository = "https://github.com/cq-rs/cqrs"

[badges]
travis-ci = { repository = "cq-rs/cqrs", branch = "master" }

[dependencies]
arrayvec = { version = "0.4", optional = true }
async-trait = "0.1.22"
futures = "0.3.1"
