[package]
name = "cqrs-core"
version = "0.2.2"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Core types and traits for cqrs"
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/cqrs-core"
repository = "https://github.com/cq-rs/cqrs"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
void = "1.0"

[badges]
travis-ci = { repository = "cq-rs/cqrs", branch = "master" }
