[package]
name = "cqrs-eventstore"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]

[dependencies]
cqrs = { path = "../cqrs" }
cqrs-data = { path = "../cqrs-data" }
hyper = "0.10.13"
serde = "*"
serde_derive = "*"
serde_json = "*"
uuid = { version = "*", features = ["serde", "v4"] }
lazy_static = "*"
rayon = "*"
failure = "0.1.1"
failure_derive = "0.1.1"

[dev-dependencies]
static_assertions = "*"
hyper-sync-rustls = "*"
env_logger = "*"
hyper-native-tls = "*"