[package]
name = "cqrs-memory"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]

[dependencies]
cqrs = { path = "../cqrs" }

[dev-dependencies]
fnv = "*"
base64 = "*"
cqrs-todo-core = { path = "../cqrs-todo-core" }
clap = "*"
chrono = "*"
iron = "*"
juniper = "0.9"
juniper_codegen = "*"
juniper_iron = "*"
mount = "*"
