[package]
name = "cqrs-postgres"
version = "0.1.0-alpha.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "An implementation of cqrs for a PostgreSQL backend."
license = "Apache-2.0"
edition = "2018"

[dependencies]
cqrs-core = { path = "../cqrs-core", version = "0.1.0-alpha.0" }
fallible-iterator = "0.1"
log = "0.4"
postgres = "0.15"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
cqrs = { path = "../cqrs", version = "0.1.0-alpha.0" }
cqrs-todo-core = { path = "../cqrs-todo-core", version = "0.1.0-alpha.0" }
static_assertions = "0.3"

[badges]
travis-ci = { repository = "cq-rs/cqrs", branch = "master" }