[package]
name = "cqrs-postgres"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "An implementation of cqrs for a PostgreSQL backend."
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/cqrs-postgres"
repository = "https://github.com/cq-rs/cqrs"
edition = "2018"

[dependencies]
cqrs-core = { version = "0.1.0", path = "../cqrs-core"}
fallible-iterator = "0.1"
log = "0.4"
postgres = "0.15"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
cqrs = { version = "0.1.0", path = "../cqrs" }
cqrs-todo-core = { version = "0.1.0", path = "../cqrs-todo-core" }
static_assertions = "0.3"

[badges]
travis-ci = { repository = "cq-rs/cqrs", branch = "master" }