[package]
name = "cqrs-postgres"
version = "0.3.1"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "An implementation of cqrs for a PostgreSQL backend."
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/cqrs-postgres"
repository = "https://github.com/cq-rs/cqrs"
edition = "2018"

[dependencies]
cqrs-core = { version = "0.3", path = "../cqrs-core"}
failure = "0.1.5"
fallible-iterator = "0.1"
log = "0.4"
num-traits = "0.2"
postgres = "0.15"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
serde = "1.0"
serde_json = "1.0"
void = "1.0.2"

[dev-dependencies]
cqrs = { version = "0.3.0", path = "../cqrs" }
cqrs-todo-core = { version = "0.2.0", path = "../cqrs-todo-core" }
lazy_static = "1.2.0"
parking_lot = "0.7.1"
static_assertions = "0.3"

[badges]
travis-ci = { repository = "cq-rs/cqrs", branch = "master" }