[package]
name = "cqrs-proptest"
version = "0.1.0-alpha.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "Property testing utilities for cqrs"
edition = "2018"
license = "Apache-2.0"

[dependencies]
cqrs-core = { path = "../cqrs-core", version = "0.1.0-alpha.0" }
proptest = "0.8"

[dev-dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"