[package]
name = "cqrs-todo-core"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]

[dependencies]
cqrs-core = { path = "../cqrs-core" }
log = "0.4.6"
smallvec = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
void = "1.0"
