[package]
name = "cqrs-todo-core"
version = "0.1.0-alpha.0"
authors = ["Marcus Griep <marcus@griep.us>"]
license = "Apache-2.0"

[dependencies]
cqrs-core = { path = "../cqrs-core" }
log = "0.4.6"
arrayvec = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
void = "1.0"

[dev-dependencies]
cqrs-proptest = { path = "../cqrs-proptest" }
insta = "0.5"
pretty_assertions = "0.5"
proptest = "0.8"

[features]
default = []
