[package]
name = "cqrs-todo-core"
version = "0.1.0-alpha.0"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "An example aggregate with a simple to-do list implementation"
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/cqrs-todo-core"
repository = "https://github.com/cq-rs/cqrs"
edition = "2018"

[dependencies]
cqrs-core = { version = "0.1.0", path = "../cqrs-core" }
log = "0.4.6"
arrayvec = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
void = "1.0"

[dev-dependencies]
cqrs-proptest = { version = "0.1.0-alpha.0", path = "../cqrs-proptest" }
insta = "0.5"
pretty_assertions = "0.5"
proptest = "0.8"

[features]
default = []

[badges]
travis-ci = { repository = "cq-rs/cqrs", branch = "master" }