[package]
name = "cqrs-todoql-psql"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]

[dependencies]
base64 = "*"
cqrs = { path = "../cqrs" }
cqrs-data = { path = "../cqrs-data" }
cqrs-todo-core = { path = "../cqrs-todo-core" }
cqrs-postgres = { path = "../cqrs-postgres" }
clap = "*"
chrono = "*"
env_logger = "0.5.13"
iron = "*"
juniper = "0.10"
juniper_codegen = "*"
juniper_iron = "*"
mount = "*"
parking_lot = "0.6.4"
r2d2_postgres = "0.14.0"
r2d2 = "*"
serde = "*"
serde_json = "*"
hashids = { version = "1.0.0", git = "https://github.com/charsyam/hashids_rust.git" }
void = "1.0.2"