[package]
name = "cqrs-todoql-psql"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
base64 = "0.10"
cqrs = { version = "0.3.0", path = "../cqrs" }
cqrs-postgres = { version = "0.3.1", path = "../cqrs-postgres" }
cqrs-todo-core = { version = "0.2.0", path = "../cqrs-todo-core" }
clap = "2.32"
chrono = "0.4"
env_logger = "0.6"
iron = "0.6"
juniper = "0.11"
juniper_codegen = "0.11"
juniper_iron = "0.3"
mount = "0.4"
num-traits = "0.2"
parking_lot = "0.7"
r2d2_postgres = "0.18.1"
r2d2 = "0.8.10"
serde = "1.0"
serde_json = "1.0"
hashids = { version = "1.0.0", git = "https://github.com/charsyam/hashids_rust.git" }
void = "1.0.2"