[package]
name = "cqrs-todoql"
version = "0.1.0"
authors = ["Marcus Griep <marcus@griep.us>"]

[dependencies]
fnv = "*"
base64 = "*"
cqrs = { path = "../cqrs" }
cqrs-data = { path = "../cqrs-data" }
#cqrs-memory = { path = "../cqrs-memory" }
cqrs-todo-core = { path = "../cqrs-todo-core" }
cqrs-redis = { path = "../cqrs-redis" }
clap = "*"
chrono = "*"
iron = "*"
juniper = "0.10"
juniper_codegen = "*"
juniper_iron = "*"
mount = "*"
redis = "*"
r2d2_redis = "*"
r2d2 = "*"
serde = "*"
serde_json = "*"
hashids = { version = "1.0.0", git = "https://github.com/charsyam/hashids_rust.git" }
void = "1.0.2"