[package]
name = "cqrs-todoql"
version = "0.1.0-alpha.0"
authors = ["Marcus Griep <marcus@griep.us>"]
publish = false

[dependencies]
fnv = "*"
base64 = "*"
cqrs = { path = "../cqrs" }
cqrs-todo-core = { path = "../cqrs-todo-core" }
cqrs-redis = { path = "../cqrs-redis" }
clap = "*"
chrono = "*"
iron = "*"
juniper = "0.10"
juniper_codegen = "*"
juniper_iron = "*"
mount = "*"
parking_lot = "0.6.4"
redis = "*"
r2d2_redis = "*"
r2d2 = "*"
serde = "*"
serde_json = "*"
hashids = { version = "1.0.0", git = "https://github.com/charsyam/hashids_rust.git" }
void = "1.0.2"