[package]
name = "cqrs"
version = "0.3.0"
edition = "2018"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "An event-sourced command-query system"
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/cqrs"
repository = "https://github.com/cq-rs/cqrs"

[badges]
travis-ci = { repository = "cq-rs/cqrs", branch = "master" }

[dependencies]
cqrs-core = { version = "0.3", path = "../cqrs-core" }
[dependencies.async-trait]
    git = "https://github.com/dtolnay/async-trait"
    branch = "master"
[dependencies.futures-preview]
    version = "0.3.0-alpha.17"
    features = ["async-await", "nightly"]
#hashbrown = "0.1"
#parking_lot = "0.7"

#[dev-dependencies]
#static_assertions = "0.3"
#cqrs-todo-core = { version = "0.2.0", path = "../cqrs-todo-core" }