[package]
name = "cqrs"
version = "0.3.0"
edition = "2018"
authors = ["Marcus Griep <marcus@griep.us>"]
description = "An event-sourced command-query system"
license = "Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/cqrs"
repository = "https://github.com/cq-rs/cqrs"

[badges]
travis-ci = { repository = "cq-rs/cqrs", branch = "master" }

[dependencies]
async-trait = "0.1.22"
cqrs-codegen = { version = "0.1.0-dev", path = "../cqrs-codegen" }
cqrs-core = { version = "0.3", path = "../cqrs-core" }
derive_more = "0.99.5"
futures = "0.3.1"
smallvec = "1.1"
sa = { version = "1.0", package = "static_assertions" }

#hashbrown = "0.1"
#parking_lot = "0.7"

#[dev-dependencies]
#static_assertions = "0.3"
#cqrs-todo-core = { version = "0.2.0", path = "../cqrs-todo-core" }